# backend/internal/routes/company.go
@@ -6,26 +6,13 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// SetupCompanyRoutes 会社関連のルートを設定
 func SetupCompanyRoutes(api fiber.Router, handler *handlers.CompanyHandler) {
 	company := api.Group("/company")
 
-	// 会社一覧を取得
-	// @Summary 会社一覧を取得
-	// @Description 会社一覧を取得
-	// @Tags company
-	// @Accept json
-	// @Produce json
-	// @Success 200 {array} models.Company
-	// @Router /company/all [get]
-	company.Get("/all", handler.GetCompanies)
+	// 会社一覧取得
+	company.Get("/list", handler.GetCompanies)
 
-	// 会社を取得
-	// @Summary 会社を取得
-	// @Description 会社を取得
-	// @Tags company
-	// @Accept json
-	// @Produce json
-	// @Success 200 {object} models.Company
-	// @Router /company/{id} [get]
+	// 会社詳細取得
 	company.Get("/:id", handler.GetCompany)
 }
